--- a/comp2007-lesson8-mon/Web.config
+++ b/comp2007-lesson8-mon/Web.config
@@ -13,7 +13,7 @@
     <httpRuntime targetFramework="4.5.1" />
   </system.web>
   <connectionStrings>
-  <add name="DefaultConnection" connectionString="metadata=res://*/Models.Contoso.csdl|res://*/Models.Contoso.ssdl|res://*/Models.Contoso.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=glh00lu0wv.database.windows.net;initial catalog=comp2007;persist security info=True;user id=gcrfreeman;password=Douglas213;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="DefaultConnection" connectionString="metadata=res://*/Models.Contoso.csdl|res://*/Models.Contoso.ssdl|res://*/Models.Contoso.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=glh00lu0wv.database.windows.net;initial catalog=comp2007;persist security info=True;user id=gcrfreeman;password=xxxxx;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
